# audio-visualizer

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  index.html
.githooks/: commit-msg  pre-commit
docs/: audio-visualizer-1a47e1f4c5e6d31d_bg.wasm  audio-visualizer-1b9fdbdfed0afd48.js  audio-visualizer-1b9fdbdfed0afd48_bg.wasm  audio-visualizer-20525439f5d398d.js  audio-visualizer-20525439f5d398d_bg.wasm  audio-visualizer-2415dd2dffe14c39_bg.wasm  audio-visualizer-343743a0bb922b9d_bg.wasm  audio-visualizer-4355b3f21ce81c20_bg.wasm  audio-visualizer-4a5ca8a7957b63.js  audio-visualizer-4a5ca8a7957b63_bg.wasm  audio-visualizer-50e97385b7f5f8ba.js  audio-visualizer-50e97385b7f5f8ba_bg.wasm  audio-visualizer-5b07d03d7bc038a6.js  audio-visualizer-5b07d03d7bc038a6_bg.wasm  audio-visualizer-6b279e76a03e1e89_bg.wasm  audio-visualizer-6ba801f04d0fcc28.js  audio-visualizer-6ba801f04d0fcc28_bg.wasm  audio-visualizer-780f8257a1b3e972.js  audio-visualizer-780f8257a1b3e972_bg.wasm  audio-visualizer-853577ea717406a5_bg.wasm  audio-visualizer-996a849f727257c9.js  audio-visualizer-996a849f727257c9_bg.wasm  audio-visualizer-e9c2e83a6c1102da_bg.wasm  audio-visualizer-f2e7d0b864efd816.js  audio-visualizer-f2e7d0b864efd816_bg.wasm  audio-visualizer-f8da05b2777c404a.js  audio-visualizer-f8da05b2777c404a_bg.wasm  audio-visualizer-ff70abdf770c348e_bg.wasm  index.html
src/: lib.rs
