[package]
name = "audio-visualizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "AudioContext",
  "AnalyserNode",
  "MediaDevices",
  "MediaStream",
  "MediaStreamConstraints",
  "MediaStreamAudioSourceNode",
  "Navigator",
]

[profile.release]
opt-level = "s"
